--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,4 +1,4 @@
-SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c  main.c
+SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/calculate_power.c main.c
 
 INC = -Iinc\
 -Iunity\
