--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        
+      - name: install math library
+        run:  sudo apt-get install -y libmath-libm-perl 
       - name: Install cppcheck
         run: sudo apt-get -y install cppcheck
+        
       - name: Cppcheck code
-        run: cppcheck
+        run: cppcheck 
