--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -4,7 +4,7 @@ SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/cal
 
 SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c main.c
 
-SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/factorial.c src/square.c main.c
+SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/factorial.c src/square.c  src/multiplication.c main.c 
 
 
 INC = -Iinc\
