--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,10 +1,6 @@
 
-SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/calculate_power.c main.c
+SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/calculate_power.c src/multiplication.c src/subtraction.c src/factorial.c src/square.c main.c 
 
-
-SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/subtraction.c main.c
-
-SRC =  src/basic_calculation.c src/advanced_calculation.c src/addition.c src/factorial.c src/square.c  src/multiplication.c main.c 
 
 
 INC = -Iinc\
